Introduced agGrid, using node modules everywhere instead of CDNs

--- a/src/components/monitor/monitor.html
+++ b/src/components/monitor/monitor.html
@@ -14,14 +14,17 @@
 
             <div class="tab-content">
                 <div id="orders" class="tab-pane fade in active">
-                    <genesis-grid name="Orders"></genesis-grid>
+                    <genesis-grid name="Orders" 
+                                  options="$ctrl.ordersGridOptions"></genesis-grid>
                 </div>
+<!--
                 <div id="routes" class="tab-pane fade">
                     <genesis-grid name="Routes"></genesis-grid>
                 </div>
                 <div id="fills" class="tab-pane fade">
                     <genesis-grid name="Fills"></genesis-grid>
                 </div>
+-->
             </div>
         </div>    
             
