Added orders, routes and fills components. Moved criteria services in a dedicated file

--- a/src/components/monitor/monitor.html
+++ b/src/components/monitor/monitor.html
@@ -14,17 +14,14 @@
 
             <div class="tab-content">
                 <div id="orders" class="tab-pane fade in active">
-                    <genesis-grid name="Orders" 
-                                  options="$ctrl.ordersGridOptions"></genesis-grid>
+                    <orders></orders>
                 </div>
-<!--
                 <div id="routes" class="tab-pane fade">
-                    <genesis-grid name="Routes"></genesis-grid>
+                    <routes></routes>
                 </div>
                 <div id="fills" class="tab-pane fade">
-                    <genesis-grid name="Fills"></genesis-grid>
+                    <fills></fills>
                 </div>
--->
             </div>
         </div>    
             
