--- a/src/components/monitor/monitor.html
+++ b/src/components/monitor/monitor.html
@@ -6,23 +6,12 @@
         </div>
         
         <div class="col-md-9">
-            <ul class="nav nav-tabs">
-                <li class="active"><a data-toggle="tab" href="#orders">Orders</a></li>
-                <li><a data-toggle="tab" href="#routes">Routes</a></li>
-                <li><a data-toggle="tab" href="#fills">Fills</a></li>
-            </ul>
-
-            <div class="tab-content">
-                <div id="orders" class="tab-pane fade in active">
-                    <orders></orders>
-                </div>
-                <div id="routes" class="tab-pane fade">
-                    <routes></routes>
-                </div>
-                <div id="fills" class="tab-pane fade">
-                    <fills></fills>
-                </div>
+            <div style='background: red; color: white'>
+                <a ui-sref='auth.home.orders'>Orders</a>
+                <a ui-sref='auth.home.routes'>Routes</a>
+                <a ui-sref='auth.home.fills'>Fills</a>
             </div>
+            <div ui-view></div>
         </div>    
             
     </div>
