Bugfix: urls not being generated due to wrong states

--- a/src/components/monitor/monitor.html
+++ b/src/components/monitor/monitor.html
@@ -7,9 +7,9 @@
         
         <div class="col-md-9">
             <div style='background: red; color: white'>
-                <a ui-sref='auth.home.orders'>Orders</a>
-                <a ui-sref='auth.home.routes'>Routes</a>
-                <a ui-sref='auth.home.fills'>Fills</a>
+                <a ui-sref='auth.monitor.orders'>Orders</a>
+                <a ui-sref='auth.monitor.routes'>Routes</a>
+                <a ui-sref='auth.monitor.fills'>Fills</a>
             </div>
             <div ui-view></div>
         </div>    
