the grid is handling show/hide columns and expand/collapse groups
Added ag-grid-enterprise

--- a/src/components/monitor/monitor.html
+++ b/src/components/monitor/monitor.html
@@ -6,7 +6,7 @@
         </div>
         
         <div class="col-md-9">
-            <div style='background: red; color: white'>
+            <div>
                 <a ui-sref='auth.monitor.orders'>Orders</a>
                 <a ui-sref='auth.monitor.routes'>Routes</a>
                 <a ui-sref='auth.monitor.fills'>Fills</a>
