Selected filters are now "remembered" when switching to another grid
Added the Session service. Bugfix when switching to another grid "page"
was not updated.

--- a/src/components/monitor/monitor.html
+++ b/src/components/monitor/monitor.html
@@ -7,9 +7,9 @@
         
         <div class="col-md-9">
             <div>
-                <a ui-sref='auth.monitor.orders'>Orders</a>
-                <a ui-sref='auth.monitor.routes'>Routes</a>
-                <a ui-sref='auth.monitor.fills'>Fills</a>
+                <a ng-click="$ctrl.show('orders')">Orders</a>
+                <a ng-click="$ctrl.show('routes')">Routes</a>
+                <a ng-click="$ctrl.show('fills')">Fills</a>
             </div>
             <div ui-view></div>
         </div>    
